@@ -13,6 +13,8 @@ Features added
 Bugs fixed
 ----------
 
+* #3614: Sphinx crashes with requests-2.5.0
+
 Testing
 --------
 
